--- a/bower.json
+++ b/bower.json
@@ -5,6 +5,7 @@
     "gsap": "^1.18.5",
     "modernizr": "~2.8.1",
     "scrollmagic": "^2.0.5",
-    "trianglify": "^0.4.0"
+    "trianglify": "^0.4.0",
+    "particles.js": "^2.0.0"
   }
 }
